# learn-stereomol

./: README.md  pixi.toml  pyproject.toml  tbump.toml
docs/source/: conf.py  index.md
notebooks/: demo.ipynb
scripts/: init.sh
src/stereomol/: __init__.py  core.py
src/stereomol/rd/: __init__.py  mol.py
tests/: test_stereomol.py
